--- a/user/user_login.html
+++ b/user/user_login.html
@@ -15,7 +15,7 @@
     <!--<title>Login & Registration Form</title>-->
 </head>
 <body>
-    <form action="user_home.html">
+    <form >
     <div class="container">
         <div class="forms">
             <div class="form login">
