--- a/user/user_login.html
+++ b/user/user_login.html
@@ -79,7 +79,7 @@
                     </div>
 
                     <div class="input-field button">
-                        <input type="button" value="Signup" onclick="addData()">
+                        <input type="button" value="Signup" onclick="addData(),location.replace('user_login.html')">
                     </div>
                 </form>
 
