Delete function done

--- a/user/inprogress.html
+++ b/user/inprogress.html
@@ -66,7 +66,7 @@
                     <label id="payRate"></label><br><br>
                     <label>Total number of hours you worked</label>
                     <input type="text" id="hoursOfWork" placeholder="Number of hours">
-                    <button class="button-27" onclick="completedTasks()" id="btnSubmit">Submit</button>
+                    <button class="button-27" onclick="completedTasks(),deleteTask()" id="btnSubmit">Submit</button>
                   </form>
                 </div>
               </div>
