--- a/user/user_login.html
+++ b/user/user_login.html
@@ -15,7 +15,8 @@
     <!--<title>Login & Registration Form</title>-->
 </head>
 <body>
-    <form action="user_home.html">
+    <!-- <form action="user_home.html"> -->
+    <form>
     <div class="container">
         <div class="forms">
             <div class="form login">
@@ -42,7 +43,7 @@
                     </div>
 
                     <div class="input-field button">
-                        <input  type="submit" value="Login" onclick="checkData(),location.replace('user_home.html')" >
+                        <input  type="submit" value="Login" onclick="checkLoginData()" >
                     </div>
                 </form>
 
