--- a/user/user_home.html
+++ b/user/user_home.html
@@ -16,19 +16,19 @@
         <div class="left-content">
           <ul class="action-list">
             <li class="item">
-              <img class="feather feather-inbox" src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/svg/inbox.svg" alt="" />
+              <img class="feather feather-inbox" src="/svg/inbox.svg" alt="" />
               <a href="user_home.html"> Home </a>
             </li>
             <li class="item">
-              <img class="feather feather-star" src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/svg/star.svg" alt="" />
+              <img class="feather feather-star" src="/svg/star.svg" alt="" />
               <a href="inprogress.html">Inprogress Tasks</a>
             </li>
             <li class="item">
-              <img class="feather feather-calendar" src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/svg/calender.svg" alt="" />
+              <img class="feather feather-calendar" src="/svg/calender.svg" alt="" />
               <a href="completed.html">Completed Tasks</a>
             </li>
             <li class="item">
-              <img class="feather feather-hash" src="/Users/raviradadiya/Desktop/JSNew/TaskManagerJS/svg/logout-svgrepo-com.svg" alt="" />
+              <img class="feather feather-hash" src="/svg/logout-svgrepo-com.svg" alt="" />
               <a href="user_login.html">Logout</a>
             </li>
           </ul>
