--- a/admin/admin_home.html
+++ b/admin/admin_home.html
@@ -24,15 +24,15 @@
           
           <ul class="action-list">
             <li class="item">
-              <img class="feather feather-inbox"  src="/Users/raviradadiya/Desktop/JSNew/TaskManagerJS/svg/inbox.svg" alt="" />
+              <img class="feather feather-inbox"  src="/svg/inbox.svg" alt="" />
               <span onclick="location.replace('admin_home.html')">Home</span>
             </li>
             <li class="item">
-              <img class="feather feather-star" src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/svg/star.svg" alt="" />
+              <img class="feather feather-star" src="/svg/star.svg" alt="" />
               <span> Activity</span>
             </li>
             <li class="item">
-              <img class="feather feather-calendar"  src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/svg/calender.svg" alt="" />
+              <img class="feather feather-calendar"  src="/svg/calender.svg" alt="" />
               <span onclick="location.replace('admin_managetasks.html')">Manage Tasks</span>
             </li>
             
@@ -66,7 +66,7 @@
       <div class="right-bar">
         <div class="top-part">
           <a href="admin_login.html">
-            <img class="feather feather-users" src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/svg/users.svg" alt="" />
+            <img class="feather feather-users" src="/svg/users.svg" alt="" />
           </a>
         </div>
         <div class="header">Task Details</div>
