--- a/admin/admin_home.html
+++ b/admin/admin_home.html
@@ -82,17 +82,17 @@
                   <div class="container">
                     
                     <form>
-                      <p>Title</p>
+                      <label>Title</label>
                       <input type="text" autocomplete="off" id="tasktitle">
-                      <p>Start Date</p>
-                      <input type="date" id="startdate">
-                      <p>Due Date</p>
-                      <input type="date" id="duedate">
-                      <p>Details</p>
+                      <label>Start Date</label>
+                      <input type="date" id="startdate"></br></br>
+                      <label>Due Date</label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                      <input type="date" id="duedate"></br></br>
+                      <label>Details</label></br></br>
                       <textarea rows="8" id="taskdesc"></textarea>
-                      <p>Assign To</p>
+                      <label>Assign To</label>
                       <input type="text" autocomplete="off" placeholder="Email of user" id="assignTo">
-                      <p>Hourly Pay Rate</p>
+                      <label>Hourly Pay Rate</label>
                         <input type="text" id="payrate" placeholder="Hourly Pay Rate" data-payrate>
                       <div class="button-cluster right">
                           <button id="task-submit" type="submit" class="button-27" onclick="addData()">Create</button>
