--- a/user/inprogress.html
+++ b/user/inprogress.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task Management Dashboard UI</title>
     <link rel="stylesheet" href="user_home.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <style>
+       :root {
+        font: 2ch/1 Consolas
+      }
+    </style>
   </head>
   <body>
     <div class="task-manager">
