--- a/admin/admin_home.html
+++ b/admin/admin_home.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task Management Dashboard UI
-      <!-- <script>localStorage.getItem('uname');</script> -->
-    </title>
+    <title> Admin Dashboard</title>
+    <link rel="icon" type="image/x-icon" href="svg/icons8-home-windows-metro-16.png">
     <link rel="stylesheet" href="admin_home.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
