--- a/admin/admin_managetasks.html
+++ b/admin/admin_managetasks.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task Management Dashboard UI
+    <title>Task Management Dashboard 
       <!-- <script>localStorage.getItem('uname');</script> -->
     </title>
     <link rel="stylesheet" href="admin_home.css" />
