--- a/user/completed.html
+++ b/user/completed.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task Management Dashboard UI</title>
+    <title>Completed Tasks </title>
     <link rel="stylesheet" href="user_home.css" />
   </head>
   <body>
