--- a/user/inprogress.html
+++ b/user/inprogress.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task Management Dashboard UI</title>
+    <title>In-progress Tasks</title>
     <link rel="stylesheet" href="user_home.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -35,7 +35,7 @@
                 </li>
                 <li class="item">
                   <img class="feather feather-hash" src="/Users/raviradadiya/Desktop/JSNew/TaskManagerJS/svg/logout-svgrepo-com.svg" alt="" />
-                  <a href="user_login.html">Logout</a>
+                  <a href="user_login.html" >Logout</a>
                 </li>
               </ul>
         </div>
