--- a/admin/admin_home.html
+++ b/admin/admin_home.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Admin Dashboard</title>
-    <link rel="icon" type="image/x-icon" href="svg/icons8-home-windows-metro-16.png">
     <link rel="stylesheet" href="admin_home.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -23,11 +22,11 @@
           
           <ul class="action-list">
             <li class="item">
-              <img class="feather feather-inbox"  src="/svg/inbox.svg" alt="" />
+              <img class="feather feather-inbox"  src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/svg/inbox.svg" alt="" />
               <span onclick="location.replace('admin_home.html')">Home</span>
             </li>
             <li class="item">
-              <img class="feather feather-calendar"  src="/svg/calender.svg" alt="" />
+              <img class="feather feather-calendar"  src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/svg/calender.svg" alt="" />
               <span onclick="location.replace('admin_managetasks.html')">Manage Tasks</span>
             </li>
             
@@ -61,7 +60,7 @@
       <div class="right-bar">
         <div class="top-part">
           <a href="admin_login.html">
-            <img class="feather feather-users" src="/svg/users.svg" alt="" />
+            <img class="feather feather-users" src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/svg/users.svg" alt="" />
           </a>
         </div>
         <div class="header">Task Details</div>
