--- a/user/user_login.html
+++ b/user/user_login.html
@@ -44,7 +44,7 @@
                     </div>
 
                     <div class="input-field button">
-                        <input  type="submit" value="Login" onclick="checkData(),location.replace('user_home.html')" >
+                        <input  type="submit" value="Login" onclick="checkData()" >
                     </div>
                 </form>
 
